--- a/client/src/components/CustomModal.css
+++ b/client/src/components/CustomModal.css
@@ -5,7 +5,13 @@
     transform: translate(-50%, -50%);
     width: 400;
     background-color: white;
-    border: 2px solid #000;
+    border-radius: 10px;
     box-shadow: 24;
     padding: 4 2 4 3
+}
+
+.parent-modal-title {
+    margin-bottom: 15px;
+    font-weight: bold;
+    font-size: 24px;
 }
